--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 
 {
-  "com.switchproject.cn": {
+  "com.MoodTracker.in": {
       "show_ad": true,
       "web_url": "http://bq66.vip",
       "show_toolbar": false,
