--- a/config.json
+++ b/config.json
@@ -3,14 +3,14 @@
   "com.MoodTracker.in": {
       "show_ad": true,
       "web_url": "http://bq66.vip",
-      "show_toolbar": true,
+      "show_toolbar": false,
       "min_version": "1.0.0",
       "description": "欢迎使用D直播"
   },
   "com.dazzle.cn": {
       "show_ad": true,
       "web_url": "http://bq66.vip",
-      "show_toolbar": true,
+      "show_toolbar": false,
       "min_version": "1.0.0",
       "description": "欢迎使用D直播"
   },
