--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
   },
   "com.5858games.cn": {
       "show_ad": true,
-      "web_url": "http://bq66.vip",
+      "web_url": "http://5858.com",
       "show_toolbar": false,
       "min_version": "1.0.0",
       "description": "欢迎使用5858"
