--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
       "web_url": "http://5858.com",
       "show_toolbar": false,
       "min_version": "1.0.0",
-      "description": "欢迎使用5858"
+      "description": "开始投注"
   },
   "com.example.app2": {
     "web_url": "https://www.google.com",
