--- a/config.json
+++ b/config.json
@@ -28,6 +28,13 @@
       "min_version": "1.0.0",
       "description": "开始投注"
   },
+  "com.5858cup.cn": {
+      "show_ad": true,
+      "web_url": "http://5858.com",
+      "show_toolbar": false,
+      "min_version": "1.0.0",
+      "description": "开始投注"
+  },
   "com.example.app2": {
     "web_url": "https://www.google.com",
     "show_ad": false,
